--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>MyBookList App</title>
 </head>
 
-<body>
+<body style="background-color: rgb(231, 214, 246);">
     <div class="container mt-4">
         <h1 class="display-4 text-center"><i class="fas fa-book-open"></i>My<span class="text-primary">Book</span>List
         </h1>
